@@ -8,8 +8,7 @@ const gchar *default_table[] = {
 				"X", N_("X window system"), "gnome-mdi.png",
 				"bash", N_("bourne again shell"), "gnome-term.png",
 				"gnome-session", N_("Gnome-Session"), "gnome-logo-icon-transparent.png",
-				"galeon-bin", N_("Galeon Web Browser"), "galeon.png",
-				"sawfish", N_("Sawfish Window Manager"), "sawfish.png",
+				"procman", N_("Procman System Monitor"), "procman.png",
 				NULL};
 
 #endif /* _DEFAULTTABLE_H_ */
