@@ -20,35 +20,12 @@ void free_key (gpointer key, gpointer value, gpointer data);
   WnckScreen *screen = NULL;
 #endif
 
-static gboolean
-compare_strings (gconstpointer a, gconstpointer b)
-{
-	const gchar *str1 = a;
-	const gchar *str2 = b;
-	
-	return g_strcasecmp (str1, str2) == 0;
-}
-
-void *
-prettytable_load_async (void *data)
-{
-	ProcData *procdata = (ProcData *)data;
-	PrettyTable *table;
-	
-	table = pretty_table_new (procdata);
-	
-	procdata->desktop_load_finished = TRUE;
-	
-	return (void *)table;
-	
-}
-
 #ifdef USE_WNCK
 static void
 new_application (WnckScreen *screen, WnckApplication *app, gpointer data)
 {
 	ProcData *procdata = data;
-	GHashTable *hash = procdata->pretty_table->cmdline_to_prettyicon;
+	GHashTable *hash = procdata->pretty_table->app_hash;
 	gint pid;
 	GdkPixbuf *icon = NULL;
 	GList *windows = NULL;
@@ -58,9 +35,7 @@ new_application (WnckScreen *screen, WnckApplication *app, gpointer data)
 	g_return_if_fail (windows);
 	window = windows->data;
 	
-	g_print ("new app \n");
 	pid = wnck_window_get_pid (window);
-	g_print ("%d \n", pid);
 	if (pid == 0)
 		return;
 		
@@ -69,20 +44,20 @@ new_application (WnckScreen *screen, WnckApplication *app, gpointer data)
 	if (icon) {
 		g_hash_table_insert (hash, g_strdup_printf ("%d", pid), icon);
 	}
-	/* Ugh this is ugly */
-	procdata->desktop_load_finished = TRUE;
+	
 }	
 
 static void
 application_finished (WnckScreen *screen, WnckApplication *app, gpointer data)
 {
+/*
 	ProcData *procdata = data;
-	GHashTable *hash = procdata->pretty_table->cmdline_to_prettyicon;
+	GHashTable *hash = procdata->pretty_table->app_hash;
 	gint pid;
 	GdkPixbuf *icon;
 	GList *windows = NULL;
 	WnckWindow *window;
-	return;
+
 	windows =  wnck_application_get_windows (app);
 	window = windows->data;
 	
@@ -93,21 +68,42 @@ application_finished (WnckScreen *screen, WnckApplication *app, gpointer data)
 		return;
 	
 	g_hash_table_remove (hash, &pid);
-	
+*/	
 }
 #endif
 
 PrettyTable *pretty_table_new (ProcData *procdata) {
 	PrettyTable *pretty_table = NULL;
-	gchar *path;
+	GList *list = NULL;
+	
+	pretty_table = g_malloc (sizeof (PrettyTable));
+	
+	pretty_table->app_hash = g_hash_table_new (g_str_hash, g_str_equal);
+	pretty_table->default_hash = g_hash_table_new (g_str_hash, g_str_equal);
 	
 #ifdef USE_WNCK
 	screen = wnck_screen_get (0);
+	wnck_screen_force_update (screen);
+	list = wnck_screen_get_windows (screen);
+	while (list) {
+		WnckWindow *window = list->data;
+		gint pid;
+		
+		pid = wnck_window_get_pid (window);
+		if (pid > 0) {
+			GdkPixbuf *icon;
+			icon = wnck_window_get_icon (window);
+	
+			if (icon) {
+				g_hash_table_insert (pretty_table->app_hash, 
+						     g_strdup_printf ("%d", pid), icon);
+			}
+		}
+		
+		list = g_list_next (list);
+	}	
 #endif	
 
-	pretty_table = g_malloc (sizeof (PrettyTable));
-	
-	pretty_table->cmdline_to_prettyicon = g_hash_table_new (g_str_hash, g_str_equal);
 	
 #ifdef USE_WNCK	
 	g_signal_connect (G_OBJECT (screen), "application_opened",
@@ -115,7 +111,8 @@ PrettyTable *pretty_table_new (ProcData *procdata) {
 	g_signal_connect (G_OBJECT (screen), "application_closed",
 			  G_CALLBACK (application_finished), procdata);
 #endif
-
+	pretty_table_add_table (pretty_table, default_table);
+	
 	return pretty_table;
 }
 
@@ -128,34 +125,28 @@ void pretty_table_add_table (PrettyTable *pretty_table, const gchar *table[]) {
 			NULL};
 	*/
 	gint i = 0;
-	gchar *command, *prettyname, *prettyicon;
+	gchar *command, *prettyicon;
 	gchar *text;
 	
-	g_hash_table_freeze (pretty_table->cmdline_to_prettyname);
-
 	while (table[i] && table[i + 1] && table[i + 2]) {
 		/* pretty_table_free frees all string in the tables */
 		command = g_strdup (table[i]); 
 		/* pretty_table_free frees all string in the tables */
-		prettyname = g_strdup (gettext(table[i + 1]));
 		text = gnome_datadir_file ("pixmaps/");
 		if (text) {
 			prettyicon = g_malloc (strlen (table[i + 2]) + strlen (text) + 1);
 			sprintf (prettyicon, "%s%s", text, table[i + 2]);
-			g_hash_table_insert (pretty_table->cmdline_to_prettyicon, 
+			g_hash_table_insert (pretty_table->default_hash, 
 					     command, prettyicon);
 			g_free (text);
 		}
-		g_hash_table_insert (pretty_table->cmdline_to_prettyname, command, prettyname);
-		
 		i += 3;
 	}
-
-	g_hash_table_thaw (pretty_table->cmdline_to_prettyname);
 
 	return;
 }
 
+#if 0
 gchar *pretty_table_get_name (PrettyTable *pretty_table, const gchar *command) {
 	gchar *pretty_name;
 
@@ -172,75 +163,36 @@ gchar *pretty_table_get_name (PrettyTable *pretty_table, const gchar *command) {
 
 	return NULL;
 }
+#endif
 
 GdkPixbuf *pretty_table_get_icon (PrettyTable *pretty_table, gchar *command, gint pid) 
 {
 	GdkPixbuf *icon = NULL, *tmp_pixbuf = NULL;
 	gchar *icon_path = NULL;
-	GError *error;
 	gchar *text;
-	gint test;
 	
 	if (!pretty_table) 
 		return NULL;
-#if 0
-	icon_path = g_hash_table_lookup (pretty_table->cmdline_to_prettyicon, command);
-	if (!icon_path) {
-		gchar *tmp1;
-		
-		tmp1 = g_strdup (command);
-		g_strdown (tmp1);
-		
-		icon_path = g_hash_table_lookup (pretty_table->name_to_prettyicon, tmp1);
-		
-		g_free (tmp1);
+
+	icon_path = g_hash_table_lookup (pretty_table->default_hash, command);
+	
+	if (icon_path) {
+		tmp_pixbuf = gdk_pixbuf_new_from_file (icon_path, NULL);			
+	}
+	else {
+		text = g_strdup_printf ("%d", pid);
+		tmp_pixbuf = g_hash_table_lookup (pretty_table->app_hash, text);
+		g_free (text);
 	}
 
-	if (!icon_path) {
-		GList *windows = NULL;
-		if (!screen)
-			g_print ("no screen yet \n");
-		windows = wnck_screen_get_windows (screen);
-		
-		if (!windows)
-			g_print ("No windows \n");
-		while (windows) {
-			int wpid = 0;
-			WnckWindow *window = windows->data;
-			
-			wpid = wnck_window_get_pid (window);
-			g_print ("window PID %d \n", wpid);
-			
-			icon_path = "hello";	
-			if (wpid == pid) {
-				tmp_pixbuf = wnck_window_get_icon (window);
-			}
-			windows = g_list_next (windows);
-		}		
-	}
-	
-	if (!icon_path)
-		return NULL;
-#endif	
 
-#ifdef USE_WNCK
-	text = g_strdup_printf ("%d", pid);
-	tmp_pixbuf = g_hash_table_lookup (pretty_table->cmdline_to_prettyicon, 
-		     text);
-	g_free (text);
-	
-	/*if (!tmp_pixbuf)
-		tmp_pixbuf = gdk_pixbuf_new_from_file (icon_path, NULL);*/
 	if (!tmp_pixbuf) 
 		return NULL;
 	
 	icon = gdk_pixbuf_scale_simple (tmp_pixbuf, 16, 16, GDK_INTERP_HYPER);
 	
 	return icon;
-#else
-	return NULL;
-#endif
-
+	
 }
 
 void free_entry (gpointer key, gpointer value, gpointer data) {
@@ -266,6 +218,7 @@ void pretty_table_free (PrettyTable *pretty_table) {
 	if (!pretty_table)
 		return;
 	return;
+#if 0
 	g_hash_table_foreach (pretty_table->cmdline_to_prettyname, free_entry, NULL);
 	g_hash_table_destroy (pretty_table->cmdline_to_prettyname);
 	g_hash_table_foreach (pretty_table->cmdline_to_prettyicon, free_value, NULL);
@@ -273,7 +226,7 @@ void pretty_table_free (PrettyTable *pretty_table) {
 	g_hash_table_foreach (pretty_table->name_to_prettyicon, free_key, NULL);
 	g_hash_table_destroy (pretty_table->name_to_prettyicon);
 	g_hash_table_destroy (pretty_table->name_to_prettyname);
-
+#endif
 	g_free (pretty_table);
 }
 
