@@ -1,5 +1,13 @@
 2001-11-18  Kevin Vandersloot <kfv101@psu.edu>
 
+	* prettytable.c: clean up some code, remove some hackery,
+	make things better. That accomplished, could I ever be
+	evil? Bring back hardcoded icons.
+	
+	* proctable.c: ditto. Make things better.
+
+2001-11-18  Kevin Vandersloot <kfv101@psu.edu>
+
 	* proctable.c: don't display "icon" for the icon column header.
 	Some minor cleanups also
 
